<resources>
    <string name="app_name">News app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="IndiaTV">India TV</string>
    <string name="NDTV">NDTV</string>
    <string name="NewsNation">News Nation</string>
    <string name="ZeeNews">Zee News</string>
    <string name="AajTak">Aaj Tak</string>
    <string name="ABP">ABP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>